--- a/index-gfw.html
+++ b/index-gfw.html
@@ -395,6 +395,11 @@ Arbitrary <a href="https://www.w3.org/TR/2006/REC-xml11-20060816/">XML</a> data 
 <td>If it contains interceptable geographical info</td>
 <td><code class="prettyprint">true</code>or <code class="prettyprint">false</code></td>
 </tr>
+<tr>
+<td>subscribable</td>
+<td>If the dataset is subscribable (i.e. contains a non-empty object in the subscribable field)</td>
+<td><code class="prettyprint">true</code> or <code class="prettyprint">false</code></td>
+</tr>
 </tbody></table>
 
 <blockquote>
